--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ destination: 'public'
 production_url: http://drj.xxx
 title : DRJ.XXX
 author:
-  name: @midgetjons
-  email: leavemealone@drj.xxx
+  name: @midgetjones
+  email: xxx@drj.xxx
