--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -220,14 +220,14 @@ development:
   # 'enabled').
   # NOTE: for initial evaluation purposes, you may want to temporarily 
   # turn the agent on in development mode.
-  monitor_mode: true
+  monitor_mode: false 
 
   # Rails Only - when running in Developer Mode, the New Relic Agent will 
   # present performance information on the last 100 transactions you have
   # executed since starting the mongrel.
   # NOTE: There is substantial overhead when running in developer mode.
   # Do not use for production or load testing.  
-  developer_mode: false
+  developer_mode: true
   
   # Enable textmate links
   # textmate: true
